--- a/style.css
+++ b/style.css
@@ -29,18 +29,14 @@ height:100%;
   padding: 0px 20px;
   background: #DED9FB;
   color: #333;
-  
   position: absolute;
   top:-140%;
   left: -25%;
-  
-
   border-radius: 9px;
+  border-color: #DED9FB;
   font: 16px;
-
   transform: translateY(9px);
-  transition: all 0.3s ease-in-out;
-  
+  transition: all 0.3s ease-in-out;  
   box-shadow: 0 0 3px rgba(56, 54, 54, 0.86);
 }
 
@@ -50,14 +46,11 @@ height:100%;
   content: " ";
   width: 0;
   height: 0;
-  
   border-style: solid;
   border-width: 12px 12.5px 0 12.5px;
-  border-color: #333 transparent transparent transparent;
-
+  border-color: #DED9FB transparent transparent transparent;
   position: absolute;
   left: 40%;
-
 }
 
 .con-tooltip:hover .tooltip{
