--- a/style.css
+++ b/style.css
@@ -27,13 +27,13 @@ height:100%;
   opacity: .40;
   width: 100%;
   padding: 0px 20px;
-  background: #DED9FB;
-  color: #333;
+  background: rgba(57,54,112,1);
+  color: #fff;
   position: absolute;
   top:-140%;
   left: -25%;
   border-radius: 9px;
-  border-color: #DED9FB;
+  border-color: rgba(57,54,112,1);
   font: 16px;
   transform: translateY(9px);
   transition: all 0.3s ease-in-out;  
@@ -48,7 +48,7 @@ height:100%;
   height: 0;
   border-style: solid;
   border-width: 12px 12.5px 0 12.5px;
-  border-color: #DED9FB transparent transparent transparent;
+  border-color: rgba(57,54,112,1) transparent transparent transparent;
   position: absolute;
   left: 40%;
 }
