--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
+/*reset*/
+html, body, div, span,
+h1, h2, h3, h4, h5, h6, p,
+a, abbr, acronym, address, big, cite, code, em, img,
+small, strike, strong, sub,
+b, u, i, center, ol, ul, li,
+fieldset, form, label, legend, caption,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header,
+menu, nav, output, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+
 body{ 
 background: rgb(57,54,112);
 background: linear-gradient(180deg, rgba(57,54,112,1) 0%, rgba(66,66,138,1) 35%, rgba(137,183,220,1) 100%);
